--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
     -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
-    <title>Exercícios React</title>
+    <title>Instagram</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
